kmymoney/views/kmymoneyview.cpp
@@ -566,7 +566,9 @@ void KMyMoneyView::closeFile(void)
   disconnect(MyMoneyFile::instance(), SIGNAL(objectRemoved(MyMoneyFile::notificationObjectT, const QString&)),
              Models::instance()->accountsModel(), SLOT(slotObjectRemoved(MyMoneyFile::notificationObjectT, const QString&)));
   disconnect(MyMoneyFile::instance(), SIGNAL(balanceChanged(const MyMoneyAccount&)),
-             Models::instance()->accountsModel(), SLOT(slotBalanceChanged(const MyMoneyAccount&)));
+             Models::instance()->accountsModel(), SLOT(slotBalanceOrValueChanged(const MyMoneyAccount&)));
+  disconnect(MyMoneyFile::instance(), SIGNAL(valueChanged(const MyMoneyAccount&)),
+             Models::instance()->accountsModel(), SLOT(slotBalanceOrValueChanged(const MyMoneyAccount&)));
 
   disconnect(MyMoneyFile::instance(), SIGNAL(objectAdded(MyMoneyFile::notificationObjectT, const MyMoneyObject * const)),
              Models::instance()->institutionsModel(), SLOT(slotObjectAdded(MyMoneyFile::notificationObjectT, const MyMoneyObject * const)));
@@ -575,7 +577,9 @@ void KMyMoneyView::closeFile(void)
   disconnect(MyMoneyFile::instance(), SIGNAL(objectRemoved(MyMoneyFile::notificationObjectT, const QString&)),
              Models::instance()->institutionsModel(), SLOT(slotObjectRemoved(MyMoneyFile::notificationObjectT, const QString&)));
   disconnect(MyMoneyFile::instance(), SIGNAL(balanceChanged(const MyMoneyAccount&)),
-             Models::instance()->institutionsModel(), SLOT(slotBalanceChanged(const MyMoneyAccount&)));
+             Models::instance()->institutionsModel(), SLOT(slotBalanceOrValueChanged(const MyMoneyAccount&)));
+  disconnect(MyMoneyFile::instance(), SIGNAL(valueChanged(const MyMoneyAccount&)),
+             Models::instance()->institutionsModel(), SLOT(slotBalanceOrValueChanged(const MyMoneyAccount&)));
 
   // notify the models that the file is going to be closed (we should have something like dataChanged that reaches the models first)
   Models::instance()->fileClosed();
@@ -1046,7 +1050,9 @@ bool KMyMoneyView::initializeStorage()
   connect(MyMoneyFile::instance(), SIGNAL(objectRemoved(MyMoneyFile::notificationObjectT, const QString&)),
           Models::instance()->accountsModel(), SLOT(slotObjectRemoved(MyMoneyFile::notificationObjectT, const QString&)));
   connect(MyMoneyFile::instance(), SIGNAL(balanceChanged(const MyMoneyAccount&)),
-          Models::instance()->accountsModel(), SLOT(slotBalanceChanged(const MyMoneyAccount&)));
+          Models::instance()->accountsModel(), SLOT(slotBalanceOrValueChanged(const MyMoneyAccount&)));
+  connect(MyMoneyFile::instance(), SIGNAL(valueChanged(const MyMoneyAccount&)),
+          Models::instance()->accountsModel(), SLOT(slotBalanceOrValueChanged(const MyMoneyAccount&)));
 
   connect(MyMoneyFile::instance(), SIGNAL(objectAdded(MyMoneyFile::notificationObjectT, const MyMoneyObject * const)),
           Models::instance()->institutionsModel(), SLOT(slotObjectAdded(MyMoneyFile::notificationObjectT, const MyMoneyObject * const)));
@@ -1055,7 +1061,9 @@ bool KMyMoneyView::initializeStorage()
   connect(MyMoneyFile::instance(), SIGNAL(objectRemoved(MyMoneyFile::notificationObjectT, const QString&)),
           Models::instance()->institutionsModel(), SLOT(slotObjectRemoved(MyMoneyFile::notificationObjectT, const QString&)));
   connect(MyMoneyFile::instance(), SIGNAL(balanceChanged(const MyMoneyAccount&)),
-          Models::instance()->institutionsModel(), SLOT(slotBalanceChanged(const MyMoneyAccount&)));
+          Models::instance()->institutionsModel(), SLOT(slotBalanceOrValueChanged(const MyMoneyAccount&)));
+  connect(MyMoneyFile::instance(), SIGNAL(valueChanged(const MyMoneyAccount&)),
+          Models::instance()->institutionsModel(), SLOT(slotBalanceOrValueChanged(const MyMoneyAccount&)));
 
   // inform everyone about new data
   MyMoneyFile::instance()->preloadCache();
